syntax = "proto3";

package idgeneration;
option java_package = "com.maycur.grpc.idgeneration";


service IdGenerationService {
    rpc GetUniqueId(IdRequest) returns (UniqueId);
    rpc GetBatchUniqueIds(BatchUniqueIdRequest) returns (UniqueIds);

}

message IdRequest{
}

message BatchUniqueIdRequest {
}

message UniqueId {
    string id = 1;
}

message UniqueIds {
    repeated string ids = 1;
}

